--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -375,7 +375,7 @@
 			<dict>
 				<key>alc-layout-id</key>
 				<data>
-				DQAAAA==
+				HgAAAA==
 				</data>
 				<key>hda-idle-support</key>
 				<string>1</string>
