--- a/无线网卡驱动/itlwm.kext/Contents/Info.plist
+++ b/无线网卡驱动/itlwm.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>19A602</string>
+	<string>19F101</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,17 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>11A1027</string>
+	<string>11E608c</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>16C58</string>
+	<string>19E258</string>
 	<key>DTSDKName</key>
-	<string>macosx10.12</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1110</string>
+	<string>1150</string>
 	<key>DTXcodeBuild</key>
-	<string>11A1027</string>
+	<string>11E608c</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>itlwm</key>
@@ -61,23 +61,23 @@
 				<key>WiFi_1</key>
 				<dict>
 					<key>password</key>
-					<string>zxyssdt112233</string>
+					<string>wwx950822</string>
 					<key>ssid</key>
-					<string>ssdt</string>
+					<string>LOVE_SALE</string>
 				</dict>
 				<key>WiFi_2</key>
 				<dict>
 					<key>password</key>
-					<string>zxyssdt112233</string>
+					<string>haihaihai</string>
 					<key>ssid</key>
-					<string>ssdt_5G</string>
+					<string>HAI_Lab_5GHz</string>
 				</dict>
 				<key>WiFi_3</key>
 				<dict>
 					<key>password</key>
 					<string></string>
 					<key>ssid</key>
-					<string>Redmi</string>
+					<string>ERICA-WiFi(Information)</string>
 				</dict>
 				<key>WiFi_4</key>
 				<dict>
